# convert

./: convert.cabal  notes.txt
source/Data/: Convert.hs
source/Data/Convert/: Class.hs  Consume.hs  Instance.hs  Numeric.hs  Tools.hs
