cabal-version:       3.8

name:                convert
version:             0.1

common configuration
  default-language:    GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    MonoLocalBinds
    LambdaCase
    RoleAnnotations
  cc-options:          -Wall -Wconversion
  ghc-options:         -Wall -Wunused-packages -Wmissing-export-lists -Wprepositive-qualified-module -Wno-name-shadowing

library
  import:              configuration
  build-depends:       base
  hs-source-dirs:      source
  exposed-modules:     Data.Convert
